<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/create_update_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/update_title"
        android:textAlignment="center"
        android:textSize="30sp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/create_update_title_text_view"
        android:layout_marginTop="15dp"
        android:layout_above="@id/button_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/name_subtitle"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_TIL"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/name_text_view"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input_TIET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/rating_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_input_TIL"
                android:layout_marginStart="30dp"
                android:text="@string/rating_subtitle"
                android:layout_marginTop="20dp"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rating_TIL"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/rating_text_view"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/rating_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rating_TIET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rating_TIL"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:text="@string/seen_at_cinema"
                android:id="@+id/seen_at_cinema_check_box"/>


            <TextView
                android:id="@+id/photo_path_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seen_at_cinema_check_box"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/photo_path_subtitle"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/photo_path_TIL"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/photo_path_text_view"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/photo_path">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/photo_path_TIET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/photo_path_TIL"
                android:layout_marginTop="20dp"
                android:id="@+id/photo_view"
                android:scaleType="centerCrop"
                android:layout_marginBottom="100dp"/>

        </RelativeLayout>

    </ScrollView>



    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/delete_button"
            android:layout_height="52dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:text="@string/delete"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/save_button"
            android:layout_height="52dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save"
            android:layout_weight="1"/>


    </LinearLayout>

</RelativeLayout>