<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_TIL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_centerHorizontal="true"
            android:hint="@string/login_hint"
            android:layout_marginHorizontal="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/username_input_TIET"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_below="@+id/username_input_TIL"
            android:layout_centerHorizontal="true"
            android:hint="@string/password_hint"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle"
            android:id="@+id/password_input_TIL">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/password_input_TIET"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/password_input_TIL"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="70dp"
            android:text="@string/login_text"
            android:textAllCaps="false"
            android:id="@+id/login_button" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/login_button"
            android:layout_marginHorizontal="70dp"
            android:text="@string/register_text"
            android:textAllCaps="false"
            android:id="@+id/register_button"
            />

    </RelativeLayout>

</RelativeLayout>